# Version History

## unreleased

## 0.13.0

* [SKB-276] fix typo in MccsTile pps_delays -> pps_delay
* [SKB-274] Set SpsStation's proxies' source to DevSource.Dev

## 0.12.1

* [MCCS-1939] AAVS3 staging environment for MCCS repos
* [MCCS-1829] Helmfile cannot create more than 1 daq-server.
* [MCCS-1944] Get Chart.lock files under version control
* [MCCS-1949] Improve ska-low-mccs-spshw chart flexibility
* [MCCS-1881] Add property to SPSStation for a DAQ TRL
* [SKB-272] Tile stuck in Programmed "tileprogrammingstate"

## 0.12.0

* [LOW-637] Move pyfabil dependency from Alessio's BitBucket to SKA GitLab
* [LOW-637] Update ska-tango-util to 0.4.9
* [LOW-637] Update ska-low-mccs-daq to 0.6.0
* [LOW-612] Fix old pyfabil ref
* [LOW-637] Update makefile repo and use appVersion as default tag in Helm chart
* [MCCS-1023] Corrected On sequence in SpsStation. Added SpsStation.Initialise command to reinitialise tiles. Corrected TileSimulator to manage configuration commands
* [MCCS-1867] DAQ directory subsystem slug incorrect
* [MCCS-1859] support arbitrary helm values
* [MCCS-1857] refactor helmfile templates
* [MCCS-1797] Configure EDA for bandpass data
* [MCCS-1805] Update calibration table field to DOUBLE PRECISION
* [MCCS-1631] Add bandpass monitoring
* [MCCS-1811] - Add functional tests using daq-handler.
* [MCCS-1805] Update station calibrator chart.
* [MCCS-1830] Remove skip on test.
* [MCCS-1592] Gherkin for bandpass monitor functional tests
* [LOW-612] move preADU set/get to pyaavs

## 0.11.0

* [MCCS-1851] Update dependencies
* [MCCS-1845] Support disabling SPS
* [MCCS-1831] SKUID as a platform service
* [LOW-589] PreADU attenuations aren't set correctly
* [MCCS-1752] Dashboard for SpsStation
* [MCCS-1724] Add SPEAD test
* [MCCS-1758] Make logging ADR-55 compliant
* [MCCS-1791] ignore external stimuli when offline
* [MCCS-1783] TANGO state not being updated in MccsTile.
* [MCCS-1781] Fix indentation bug in values file.