@@ -101,7 +101,7 @@ repositories:
 
 releases:
   - name: ska-low-mccs-spshw
-    namespace: ska-low-mccs
+    namespace: {{.Namespace | default "ska-low-mccs"}}
     chart: ../charts/ska-low-mccs-spshw
     version: ~0.13.0
     values:
@@ -117,7 +117,7 @@ releases:
 {{- $tango_host_provided := dig "overrides" "cluster" "services" "tango-base" "tango-host" $_tango_host_provided .Values}}
 {{- if not $tango_host_provided}}
   - name: ska-tango-base
-    namespace: ska-low-mccs
+    namespace: {{.Namespace | default "ska-low-mccs"}}
     chart: skao/ska-tango-base
     version: ~0.4.7
     values:
@@ -128,7 +128,7 @@ releases:
 {{- $skuid_provided := dig "overrides" "cluster" "services" "skuid" "url" $_skuid_provided .Values}}
 {{- if not $skuid_provided}}
   - name: ska-ser-skuid
-    namespace: ska-low-mccs
+    namespace: {{.Namespace | default "ska-low-mccs"}}
     chart: skao/ska-ser-skuid
     version: ~3.3.3
     values:
@@ -139,7 +139,7 @@ releases:
 {{- $jupyterhub_provided := dig "overrides" "cluster" "services" "jupyterhub" $_jupyterhub_provided .Values}}
 {{- if not $jupyterhub_provided}}
   - name: jupyterhub
-    namespace: ska-low-mccs
+    namespace: {{.Namespace | default "ska-low-mccs"}}
     chart: jupyterhub/jupyterhub
     version: 3.1.0
     values:
@@ -150,19 +150,19 @@ releases:
 {{- $taranta_platform_provided := dig "overrides" "cluster" "services" "taranta-platform" $_taranta_platform_provided .Values}}
 {{- if not $taranta_platform_provided}}
   - name: taranta-dashboard
-    namespace: ska-low-mccs
+    namespace: {{.Namespace | default "ska-low-mccs"}}
     chart: skao/ska-tango-taranta-dashboard
-    version: 1.4.1
+    version: 1.4.1  # TODO: pinning for now because 1.4.2 is breaking
     values:
       - ingress:
           enabled: true
           hostname: "*"
   - name: taranta-dashboard-pvc
-    namespace: ska-low-mccs
+    namespace: {{.Namespace | default "ska-low-mccs"}}
     chart: skao/ska-tango-taranta-dashboard-pvc
-    version: ~1.4.1
+    version: 1.4.1  # TODO: pinning for now because 1.4.2 is breaking
   - name: taranta-auth
-    namespace: ska-low-mccs
+    namespace: {{.Namespace | default "ska-low-mccs"}}
     chart: skao/ska-tango-taranta-auth
     version: ~0.1.6
     values:
@@ -172,14 +172,14 @@ releases:
 {{- end}}
 
   - name: taranta
-    namespace: ska-low-mccs
+    namespace: {{.Namespace | default "ska-low-mccs"}}
     chart: skao/ska-tango-taranta
-    version: ~2.4.2
+    version: ~2.5.1
     values:
       - values/taranta.yaml
 
   - name: tangogql
-    namespace: ska-low-mccs
+    namespace: {{.Namespace | default "ska-low-mccs"}}
     chart: skao/ska-tango-tangogql
     version: ~1.3.10
     values:
